Replace UA with User Agent in text.

--- a/index.src.html
+++ b/index.src.html
@@ -1721,7 +1721,7 @@ Configurations{#configurations}
 ------------------------------------------------------------------------
 Run these steps:
 1. If the <a>codec string</a> in |config|.codec is not a
-    <a>valid codec string</a> or is otherwise unrecognized by the UA,
+    <a>valid codec string</a> or is otherwise unrecognized by the User Agent,
     return `false`.
 2. If |config| is an {{AudioDecoderConfig}} or {{VideoDecoderConfig}} and the
     User Agent can't provide a <a>codec</a> that can decode the exact profile
