Add contentHint section to registries

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -63,8 +63,11 @@ Registration Entry Requirements {#registration-entry-requirements}
     4. Expectations for {{EncodedAudioChunk}} or {{EncodedVideoChunk}}
         {{EncodedVideoChunk/[[type]]}}
 4. Where applicable, a registration specification may include a section
-    describing extensions to {{VideoEncoderConfig}} or {{AudioEncoderConfig}}
-    dictionaries.
+    describing:
+    1. Extensions to {{VideoEncoderConfig}} or {{AudioEncoderConfig}}
+        dictionaries
+    2. Guidelines for mapping {{VideoEncoderConfig/contentHint}} or
+        {{VideoEncoderConfig/contentHint}} values to codec-specific concepts.
 5. Candidate entries must be announced by filing an issue in the
     [WebCodecs GitHub issue tracker](https://github.com/w3c/webcodecs/issues/)
     so they can be discussed and evaluated for compliance before being added to
