--- a/index.src.html
+++ b/index.src.html
@@ -1648,28 +1648,29 @@ Algorithms {#videoencoder-algorithms}
             2. Assign |outputConfig| to
                 {{VideoEncoder/[[active output config]]}}.
         7. If |encoderConfig|.{{VideoEncoderConfig/scalabilityMode}}
-            describes multiple [=temporal layers=]:
-            1. Let |svc| be a new {{SvcOutputMetadata}} instance.
-            2. Let |temporal_layer_id| be the zero-based index describing the
-                temporal layer for |output|.
-            3. Assign |temporal_layer_id| to
-                |svc|.{{SvcOutputMetadata/temporalLayerId}}.
-            4. Assign |svc| to
-                |chunkMetadata|.{{EncodedVideoChunkMetadata/svc}}.
+            describes multiple [=temporal layers=] or [=spatial layers=]:
+                  1. Let |svc| be a new {{SvcOutputMetadata}} instance.
         8. If |encoderConfig|.{{VideoEncoderConfig/scalabilityMode}}
+            describes multiple [=temporal layers=]:
+            1. Let |temporal_layer_id| be the zero-based index describing the
+                temporal layer for |output|.
+            2. Assign |temporal_layer_id| to
+                |svc|.{{SvcOutputMetadata/temporalLayerId}}.
+        9. If |encoderConfig|.{{VideoEncoderConfig/scalabilityMode}}
             describes multiple [=spatial layers=]:
-            1. Let |svc| be a new {{SvcOutputMetadata}} instance.
-            2. Let |spatial_layer_id| be the zero-based index describing the
+            1. Let |spatial_layer_id| be the zero-based index describing the
                 spatial layer for |output|.
-            3. Assign |spatial_layer_id| to
+            2. Assign |spatial_layer_id| to
                 |svc|.{{SvcOutputMetadata/spatialLayerId}}.
-            4. Assign |svc| to
+       10. If |encoderConfig|.{{VideoEncoderConfig/scalabilityMode}}
+            describes multiple [=temporal layers=] or [=spatial layers=]:
+            1. Assign |svc| to
                 |chunkMetadata|.{{EncodedVideoChunkMetadata/svc}}.
-        9. If |encoderConfig|.{{VideoEncoderConfig/alpha}} is set to `"keep"`:
+       11. If |encoderConfig|.{{VideoEncoderConfig/alpha}} is set to `"keep"`:
             1. Let |alphaSideData| be the encoded alpha data in |output|.
             2. Assign |alphaSideData| to
                 |chunkMetadata|.{{EncodedVideoChunkMetadata/alphaSideData}}.
-       10. Invoke {{VideoEncoder/[[output callback]]}} with |chunk| and
+       12. Invoke {{VideoEncoder/[[output callback]]}} with |chunk| and
             |chunkMetadata|.
   </dd>
   <dt><dfn>Reset VideoEncoder</dfn> (with |exception|)</dt>
