Move frameId and dependencies

--- a/index.src.html
+++ b/index.src.html
@@ -1736,6 +1736,12 @@ dictionary SvcOutputMetadata {
 :: A {{BufferSource}} that contains the {{EncodedVideoChunk}}'s extra alpha
     channel data.
 
+: <dfn dict-member for= EncodedVideoChunkMetadat>frameId</dfn>
+:: A number that identifies the associated {{EncodedVideoChunk}}.
+
+: <dfn dict-member for= EncodedVideoChunkMetadat>dependencies</dfn>
+:: A sequence containing the {{frameId}} values that the associated {{EncodedVideoChunk}} depends on.
+
 : <dfn dict-member for=SvcOutputMetadata>temporalLayerId</dfn>
 :: A number that identifies the [=temporal layer=] for the associated
     {{EncodedVideoChunk}}.
@@ -1743,13 +1749,6 @@ dictionary SvcOutputMetadata {
 : <dfn dict-member for=SvcOutputMetadata>spatialLayerId</dfn>
 :: A number that identifies the [=spatial layer=] for the associated
     {{EncodedVideoChunk}}.
-
-: <dfn dict-member for=SvcOutputMetadata>frameId</dfn>
-:: A number that identifies the associated {{EncodedVideoChunk}}.
-
-
-: <dfn dict-member for=SvcOutputMetadata>dependencies</dfn>
-:: A sequence containing the {{frameId}} values that the associated {{EncodedVideoChunk}} depends on.
       
 Configurations{#configurations}
 ===============================
