Export Close VideoFrame as it is used in mediacapture-transform spec

--- a/index.src.html
+++ b/index.src.html
@@ -4006,7 +4006,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             in |clone|.
     2. Return |clone|.
 
-: <dfn>Close VideoFrame</dfn> (with |frame|)
+: <dfn export>Close VideoFrame</dfn> (with |frame|)
 :: 1. Assign `null` to |frame|'s {{VideoFrame/[[resource reference]]}}.
     2. Assign `true` to |frame|'s {{platform object/[[Detached]]}}.
     3. Assign `null` to |frame|'s {{VideoFrame/format}}.
