--- a/index.src.html
+++ b/index.src.html
@@ -1916,7 +1916,9 @@ To check if an {{AudioDecoderConfig}} is a <dfn export>valid AudioDecoderConfig<
 1. If {{AudioDecoderConfig/codec}} is empty after
     [=strip leading and trailing ASCII whitespace|stripping leading and trailing ASCII whitespace=],
     return `false`.
-2. Return `true`.
+2. If the result of running  IsDetachedBuffer (described in
+    [[!ECMASCRIPT]]) on {{AudioDecoderConfig/description}} is `true`, return `false`.
+3. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=AudioDecoderConfig>codec</dfn></dt>
@@ -1970,7 +1972,9 @@ run these steps:
     return `false`.
 5. If {{VideoDecoderConfig/displayAspectWidth}} = 0 or
     {{VideoDecoderConfig/displayAspectHeight}} = 0, return `false`.
-6. Return `true`.
+6. If the result of running  IsDetachedBuffer (described in
+    [[!ECMASCRIPT]]) on {{VideoDecoderConfig/description}} is `true`, return `false`.
+7. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderConfig>codec</dfn></dt>
@@ -5360,7 +5364,7 @@ run these steps:
     [=ReadableStream/disturbed=] or [=ReadableStream/locked=], return `false`.
 3. If |data| is of type {{BufferSource}}:
     1. If the result of running  IsDetachedBuffer (described in
-        [[!ECMASCRIPT]]) on |data| is `false`, return `false`.
+        [[!ECMASCRIPT]]) on |data| is `true`, return `false`.
     2. If |data| [=list/is empty=], return `false`.
 4. If {{ImageDecoderInit/desiredWidth}} [=map/exists=] and
     {{ImageDecoderInit/desiredHeight}} does not exist, return `false`.
